--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 text-slate-900 h-screen overflow-hidden">
+  <body class="bg-slate-50 text-slate-900 min-h-screen">
     <div id="root" class="h-full"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
